k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: url-shortener
  labels:
    name: url-shortener
    app: url-shortener-boost
    environment: production
